--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/cli": "^11.0.5",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "^7.2.16",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -36,9 +36,9 @@
     "typescript": "~3.2.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^11.0.5",
-    "@angular/compiler-cli": "^7.2.16",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
