--- a/package.json
+++ b/package.json
@@ -12,52 +12,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "bootstrap": "^4.4.1",
-    "core-js": "^2.5.4",
-    "express": "^4.17.1",
-    "path": "^0.12.7",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "typescript": "~3.2.2",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "^19.2.3",
+    "@angular/common": "^19.2.3",
+    "@angular/compiler": "^19.2.3",
+    "@angular/compiler-cli": "^19.2.4",
+    "@angular/core": "^19.2.4",
+    "@angular/forms": "^19.2.3",
+    "@angular/platform-browser": "^19.2.3",
+    "@angular/platform-browser-dynamic": "^19.2.3",
+    "@angular/router": "^19.2.3",
+    "@fortawesome/angular-fontawesome": "1.0.0",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@ng-bootstrap/ng-bootstrap": "18.0.0",
+    "@tailwindcss/postcss": "^4.0.17",
+    "bootstrap": "5.3.3",
+    "core-js": "3.36.0",
+    "express": "4.18.2",
+    "path": "0.12.7",
+    "postcss": "^8.5.3",
+    "rxjs": "7.8.2",
+    "tailwindcss": "^4.0.17",
+    "tslib": "2.8.1",
+    "typescript": "5.8.2",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^19.2.4",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/core": "^19.2.3",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "@angular-devkit/build-angular": "^19.2.4",
+    "@angular/cli": "^19.2.5",
+    "@angular/language-service": "^19.2.3",
+    "@types/jasmine": "^4.3.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^18.18.6",
+    "enhanced-resolve": "^5.15.0",
+    "jasmine-core": "^4.6.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "engines": {
-    "node": "10.16.0",
-    "npm": "6.9.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
